--- a/sources/VeloCity.Wpf.Presentation/SprintsArea/StartSprintConfirmation/SprintStartConfirmationWindow.xaml
+++ b/sources/VeloCity.Wpf.Presentation/SprintsArea/StartSprintConfirmation/SprintStartConfirmationWindow.xaml
@@ -29,6 +29,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     mc:Ignorable="d"
     Title="{Binding Title}"
+    Subtitle="{Binding SprintName}"
     WindowStartupLocation="CenterOwner"
     d:DataContext="{d:DesignInstance startSprintConfirmation:SprintStartConfirmationViewModel}"
     Width="800"
