--- a/sources/VeloCity.Wpf.Presentation/SprintsArea/Sprints/SprintsPage.xaml
+++ b/sources/VeloCity.Wpf.Presentation/SprintsArea/Sprints/SprintsPage.xaml
@@ -73,7 +73,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <customControls:MissingContentPanel
             Grid.Column="2"
             Margin="30"
-            IsContentVisible="{Binding IsSprintSelected}">
+            IsContentVisible="{Binding IsContentDisplayed}">
 
             <customControls:MissingContentPanel.MissingContent>
 
@@ -143,13 +143,27 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
                     </StackPanel>
 
-                    <TextBlock
-                        Text="{Binding Title}"
-                        FontSize="32"
-                        Foreground="{StaticResource FontPrimaryBrush}"
-                        VerticalAlignment="Center"
-                        TextTrimming="CharacterEllipsis"
-                        Margin="0 10" />
+                    <DockPanel>
+
+                        <TextBlock
+                            DockPanel.Dock="Left"
+                            Text="{Binding Title}"
+                            FontSize="36"
+                            Foreground="{StaticResource FontPrimaryBrush}"
+                            VerticalAlignment="Center"
+                            TextTrimming="CharacterEllipsis"
+                            Margin="0 10" />
+
+                        <TextBlock
+                            DockPanel.Dock="Left"
+                            Text="{Binding Subtitle}"
+                            FontSize="26"
+                            Foreground="{StaticResource FontDimBrush}"
+                            VerticalAlignment="Center"
+                            TextTrimming="CharacterEllipsis"
+                            Margin="20 10 0 10" />
+
+                    </DockPanel>
 
                 </DockPanel>
 
