--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/OfficialHolidayAbsenceControlStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/OfficialHolidayAbsenceControlStyles.xaml
@@ -19,7 +19,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls">
+    xmlns:customControls="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls"
+    xmlns:converters="clr-namespace:DustInTheWind.VeloCity.Wpf.Presentation.CustomControls.Converters;assembly=DustInTheWind.VeloCity.Wpf.Presentation.CustomControls">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Pack://application:,,,/DustInTheWind.VeloCity.Wpf.Presentation.Styles;component/Themes/Constants.xaml" />
@@ -27,25 +28,53 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </ResourceDictionary.MergedDictionaries>
 
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+    <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
 
     <Style TargetType="{x:Type customControls:OfficialHolidayAbsenceControl}">
 
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type customControls:OfficialHolidayAbsenceControl}">
-                    <StackPanel Orientation="Horizontal">
+                    <Grid>
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+
                         <customControls:GenericIcon
+                            Grid.Row="0"
+                            Grid.Column="0"
                             Style="{StaticResource FourDotsIconStyle}"
                             Width="12"
                             Height="12"
                             Margin="0 0 10 0"
                             Foreground="Chocolate" />
 
-                        <TextBlock>
+                        <TextBlock
+                            Grid.Row="0"
+                            Grid.Column="1">
+
                             <Run Text="{TemplateBinding HolidayName}" />
                             <Run Text="{Binding HolidayCountry, RelativeSource={RelativeSource TemplatedParent}, StringFormat=({0})}" />
                         </TextBlock>
-                    </StackPanel>
+
+                        <TextBlock
+                            Grid.Row="1"
+                            Grid.Column="0"
+                            Grid.ColumnSpan="2"
+                            Margin="0 10 0 0"
+                            Text="{TemplateBinding HolidayDescription}"
+                            Visibility="{Binding HolidayDescription, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource NullToVisibilityConverter}}"
+                            TextWrapping="Wrap"
+                            Foreground="{StaticResource FontDimBrush}"
+                            FontSize="13" />
+                    </Grid>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
