--- a/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/TeamMemberAbsenceControlStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/Themes/CustomControls/TeamMemberAbsenceControlStyles.xaml
@@ -91,10 +91,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                                         FontSize="13"
                                         Foreground="{StaticResource FontDimBrush}">
 
-                                        <!--<TextBlock Text="The user is missing a few hours in this day. Not the whole day." />-->
-                                        <Run Text="The user is missing" />
+                                        <Run Text="The team member is missing" />
                                         <Run Text="{Binding AbsenceHours, RelativeSource={RelativeSource TemplatedParent}}" />
-                                        <Run Text="hours. Not the whole day." />
+                                        <Run Text="hours." />
 
                                     </TextBlock>
 
